Changing clicking area to have extra padding on top and bottom, but not sides.  If I pad the size the paragraph alignment is no longer centered.

--- a/media/styles/calendar.css
+++ b/media/styles/calendar.css
@@ -209,7 +209,7 @@ table td {
 
 	.resend-password a,
 	.sign-up a {
-		padding: 10px 10px 10px 0;
+		padding: 10px 0;
 	}
 
 	.sign-up {
